EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==06/22/2009==
Trevius: (Rabayn) When creating recipes, it is no longer required that componentcount be on separate rows from the successcount or failcount row.
Trevius: (takatok) AA Shield Block added.
Trevius: (Shendare) Armor Tint on NPCs can now be set on a per-slot basis.

Required SQL: /utils/sql/svn/702_aashieldblock_tint_table.sql

==06/20/2009==
WildcardX: Migrated more code for BOTS from database.cpp to bot.cpp.
AndMetal: Added rule 'Zone:PEQZoneReuseTime' to adjust the reuse time on the #peqzone command. Defaults to 300 per change in Rev 612.
AndMetal: Correction to the item link code used in quests.
AndMetal: Cleaned up zone/StringIDs.h to make it easier to read, plus added some additional String IDs.
AndMetal: Cleaned up fishing some.
AndMetal: Fishing failures should now happen immediately instead of waiting for the timer to run.

Optional SQL: /utils/sql/svn/699_peqzone_rule.sql

==06/19/2009==
KLS: NPCs will no longer warp to their very first waypoint if they start on a grid, make sure they're spawned near their first waypoint!
KLS: Added quest::SetRunning(value) (1 for run, 0 for walk) to let a NPC run when out of combat instead of walk.
KLS: Added quest::IsRunning() return 0 for walk, 1 for run to let quest know if the npc is walking or running.
cavedude (nilbog): Added many missing pet names.
realityincarnate: Restricted monster summoning to things more traditionally considered monsters (no boats, among others)

==06/18/2009==
Derision: Fixed some flawed database queries and a few compile warnings.
Derision: Added command #reloadtitles to reload titles from the database.
Derision: Added second optional argument to #title and #titlesuffix to save the title to the database if 1.
Derision: Added second optional argument to $client->SetAATitle/SetTitleSuffix to save the title to the database.