@@ -1,0 +1,4 @@
+INSERT INTO `rule_values` VALUES ('1', 'Zone:UsePEQZoneDebuffs', 'true', 'Will determine if #peqzone will debuff players or not when used.');
+REPLACE INTO `rule_values` VALUES ('1', 'Zone:PEQZoneReuseTime', '900', 'Amount of time, in seconds, before you can reuse the #peqzone command');
+INSERT INTO `rule_values` VALUES ('1', 'Zone:PEQZoneDebuff1', '4454', 'First debuff casted by #peqzone Default is Cursed Keepers Blight.');
+INSERT INTO `rule_values` VALUES ('1', 'Zone:PEQZoneDebuff2', '2209', 'Second debuff casted by #peqzone Default is Tendrils of Apathy.');
